# py_uds

./: .gitignore  404.html  README.md  _config.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
999_reference/: index.html
docs/: 999_reference.md  dummy_uds_ecu_concept.drawio  index.md
scripts/: run_pytests_with_report.bat
search/: search_index.json
src/: py_uds.py  py_uds_lib.py  py_uds_lib_gui.py
src/py_uds_lib_utils/: diag_parser.py  diag_services.py  dummy_ecu.py  lib_variables.py
tests/: test_py_uds.py  test_py_uds_lib.py
