[tool.poetry]
name = "py_uds"
version = "0.0.1"
description = "Python UDS package"
authors = ["chaitu-ycr <chaitu.ycr@gmail.com>"]
license = "LICENSE"
readme = "README.md"
homepage = "https://github.com/chaitu-ycr/py_uds.git"
repository = "https://github.com/chaitu-ycr/py_uds.git"
documentation = "https://chaitu-ycr.github.io/py_uds/"
keywords = ["python", "UDS", "diagnostics"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Embedded Systems"
]
packages = [
    { include = "py_uds.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
pytest-html = "^4.1.1"

[tool.poetry.group.dev.dependencies]
mkdocstrings-python = "^1.7.5"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
